FIXED: header logo extra margin on mobile screen

--- a/static/style.css
+++ b/static/style.css
@@ -175,3 +175,9 @@ padding: auto;
   }
 
 }
+@media (max-width: 700px) {
+  .main-navbar-logo {
+    /* display: none !important; */
+    margin: 0px !important;
+  }
+}
